// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/common/item/IconCell render() should render correct bookmark icon 1`] = `
<BookmarkIcon
  title="Bookmark"
/>
`;

exports[`elements/common/item/IconCell render() should render correct file icon 1`] = `
<FileIcon
  extension="boxnote"
  title="File"
/>
`;

exports[`elements/common/item/IconCell render() should render correct folder icon 1`] = `
<FolderIcon
  isCollab={false}
  isExternal={false}
  title="Personal Folder"
/>
`;

exports[`elements/common/item/IconCell render() should render correct folder icon 2`] = `
<FolderIcon
  isCollab={true}
  isExternal={false}
  title="Collaborated Folder"
/>
`;

exports[`elements/common/item/IconCell render() should render correct folder icon 3`] = `
<FolderIcon
  isCollab={true}
  isExternal={true}
  title="Collaborated Folder"
/>
`;

exports[`elements/common/item/IconCell render() should render correct folder icon 4`] = `
<FolderIcon
  isCollab={false}
  isExternal={true}
  title="External Folder"
/>
`;
